# aoc2023

./: .gitignore  README.md  makefile  pyproject.toml
inputs/: 05.test  13.test
src/: 01.py  02.py  03.py  04.py  04golf.py  04golf2.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py
src/utils/: api.py  common.py  new_file.py  new_file_template.txt  run.py
src/vis/: init-base.mcfunction  load-base.mcfunction  tick-base.mcfunction
