[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Paul Hutchins <paul.hutchins@uptickhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
